force-app/main/default/objects/CS_Murex_Temp__c/CS_Murex_Temp__c.object-meta.xml
<CustomObject>
    <label>CS Murex Temp</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Murex Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS Murex Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>