force-app/main/default/objects/CS_Murex_Temp__c/fields/As_of_date__c.field-meta.xml
<CustomField>
    <fullName>As_of_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As of date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>