force-app/main/default/objects/CS_Murex_Temp__c/fields/CS_Create_E_Client_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>CS_Create_E_Client_Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Create E Client Time Stamp</label>
    <type>DateTime</type>
</CustomField>