force-app/main/default/objects/CS_Murex_Temp__c/fields/CS_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Expiry Date</label>
    <type>Date</type>
</CustomField>