force-app/main/default/objects/CS_Murex_Temp__c/fields/CS_Is_Updated_From_Murex__c.field-meta.xml
<CustomField>
    <fullName>CS_Is_Updated_From_Murex__c</fullName>
    <formula>IF ( ISBLANK(CS_Create_E_Client_Time_Stamp__c) || ISBLANK(Murex_Last_Modified_Date__c) , true  ,
 IF(  Murex_Last_Modified_Date__c &gt;  CS_Create_E_Client_Time_Stamp__c , true, false) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Is Updated From Murex</label>
    <type>Checkbox</type>
</CustomField>