force-app/main/default/objects/CS_Murex_Temp__c/fields/CS_Level__c.field-meta.xml
<CustomField>
    <fullName>CS_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>