force-app/main/default/objects/CS_Murex_Temp__c/fields/Murex_Counter_Label__c.field-meta.xml
<CustomField>
    <fullName>Murex_Counter_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Counter Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>