force-app/main/default/objects/CS_Murex_Temp__c/fields/Murex_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Murex_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Murex Create Date</label>
    <type>Date</type>
</CustomField>