force-app/main/default/objects/CS_Murex_Temp__c/fields/Murex_ID__c.field-meta.xml
<CustomField>
    <fullName>Murex_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Murex ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>