force-app/main/default/objects/CS_Murex_Temp__c/fields/Murex_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Murex_Last_Modified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Murex Last Modified Date</label>
    <type>DateTime</type>
</CustomField>