force-app/main/default/objects/CS_Murex_Temp__c/fields/RM_Code__c.field-meta.xml
<CustomField>
    <fullName>RM_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>