force-app/main/default/objects/CS_Murex_Temp__c/fields/Suspend_Flag__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Flag</label>
    <type>Checkbox</type>
</CustomField>