force-app/main/default/objects/CS_Murex_Temp__c/validationRules/Prevent_Murex_Create_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Murex_Create_Date</fullName>
    <active>true</active>
    <description>If Level = Null, Murex Create Date is not null</description>
    <errorConditionFormula>IF(ISBLANK(CS_Level__c), ISBLANK(Murex_Create_Date__c), FALSE)</errorConditionFormula>
    <errorDisplayField>Murex_Create_Date__c</errorDisplayField>
    <errorMessage>Murex Create Date must not be null if Level is blank</errorMessage>
</ValidationRule>