force-app/main/default/objects/CS_Murex_Temp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Murex_Counter_Label__c</columns>
    <columns>Murex_ID__c</columns>
    <columns>RM_Code__c</columns>
    <columns>As_of_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>